logs/Slang/generated/keywords/5.6.2--keyword_join_none.sv.log
name: join_none
description: The 'join_none' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_join_none.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_join_none.sv:8:8: error: expected declarator
    bit join_none;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_join_none.sv:8:9: error: expected member
    bit join_none;
        ^~~~~~~~~
